Add TypeScript support

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Hello World</title>
+    <title>Hello World!</title>
   </head>
   <body>
-    <img src="halloween.png">
+    <img src="assets/halloween.png" width="100">
   </body>
 </html>
