Add Prettier & fix ESLint

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <img src="assets/halloween.png" width="100">
+    <img src="assets/halloween.png" width="100" />
   </body>
 </html>
