Add ability to load images from src

--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,9 @@
   </head>
   <body>
     <img src="assets/halloween.png" width="100" />
+    <img
+      src="images/test.png"
+      width="200"
+    />
   </body>
 </html>
